--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-.bundle
-.sass-cache
-Gemfile.lock
-_site
-*.gem
+_site/*
+_theme_packages/*
+
+Thumbs.db
+.DS_Store
+
+!.gitkeep
+
+.rbenv-version
+.rvmrc
